Use java.net.URI rather than java.net.URL for URI resolution.